<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Studentregistration</string>
    <string name="action_settings">Settings</string>
    
    <string name="chkGood">Good</string>
    <string name="chkNotBad">Not Bad</string>
    <string name="chkBad">Bad</string> 
    
    
    <string name="radioAndroidknown">Male</string>
    <string name="radioAndroidnotKnown">Female</string>
</resources>
