<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

<CheckBox
    android:id="@+id/chkNotBad"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/chkBad"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="78dp"
    android:text="@string/chkNotBad" />

<CheckBox
    android:id="@+id/chkBad"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/chkNotBad"
    android:layout_alignLeft="@+id/chkGood"
    android:layout_marginBottom="23dp"
    android:text="@string/chkBad" />

<EditText
    android:id="@+id/txtfristname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="17dp"
    android:layout_toRightOf="@+id/chkBad"
    android:ems="10"
    android:hint="Enter frist name" >

    <requestFocus />
</EditText>

<EditText
    android:id="@+id/editText2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/txtfristname"
    android:layout_below="@+id/txtfristname"
    android:layout_marginTop="14dp"
    android:ems="10" 
    android:hint="Enter last name"/>

<TextView
    android:id="@+id/lblFirstname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/txtfristname"
    android:layout_alignBottom="@+id/txtfristname"
    android:layout_alignParentLeft="true"
    android:text="Frist name" 
    
    />

<TextView
    android:id="@+id/lblLastname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/editText2"
    android:layout_alignParentLeft="true"
    android:text="Last name" />

<Spinner
    android:id="@+id/cobSex"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/lblLastname"
    android:layout_below="@+id/editText2"
    android:layout_marginTop="18dp" />

<RadioGroup
        android:id="@+id/radioAndroidknown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
    android:layout_alignRight="@+id/radioAndroidknown"
    android:layout_marginBottom="27dp"

         >


<RadioButton
    android:id="@+id/radioAndroidnotKnown"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/radioAndroidknown"
    android:layout_marginLeft="29dp"
    android:layout_toRightOf="@+id/radioAndroidknown"
    android:checked="true"
    android:text="@string/radioAndroidnotKnown" />

<RadioButton
    android:id="@+id/radioAndroidknown"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignRight="@+id/radioAndroidknown"
    android:layout_marginBottom="27dp"
    android:text="@string/radioAndroidknown" />
</RadioGroup>
<CheckBox
    android:id="@+id/chkGood"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:text="@string/chkGood" />

</RelativeLayout>
